--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "@onflow/fcl": "^0.0.76",
     "@onflow/types": "^0.0.4",
     "aws-sdk": "^2.951.0",
+    "axios": "^0.21.1",
     "fcl-kms-authorizer": "^0.0.6",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "^10.2.0",
     "nft.storage": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-spinners": "^0.11.0"
+    "react-icons": "^4.2.0",
+    "react-image": "^4.0.3",
+    "react-spinners": "^0.11.0",
+    "webhook-discord": "^3.7.8"
   },
   "devDependencies": {
     "@types/node": "^14.0.5",
