--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "fcl-kms-authorizer": "^0.0.6",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "i18next": "^20.4.0",
     "next": "^10.2.0",
+    "next-i18next": "^8.6.0",
     "nft.storage": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
