update react and nextjs version

--- a/package.json
+++ b/package.json
@@ -3,46 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider next start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "typecheck": "tsc",
     "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .ts,.tsx --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.14",
-    "@chakra-ui/react": "^1.6.5",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fleekhq/fleek-storage-js": "^1.0.17",
     "@onflow/fcl": "^1.9.0",
     "@onflow/types": "^1.2.1",
-    "axios": "^0.21.1",
-    "formik": "^2.2.9",
-    "framer-motion": "^4.1.17",
-    "i18next": "^20.4.0",
-    "next": "^10.2.0",
-    "next-i18next": "^8.6.0",
+    "axios": "^1.6.2",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.16",
+    "i18next": "^23.7.11",
+    "next": "^14.0.4",
+    "next-i18next": "^15.1.1",
     "nft.storage": "^3.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-image": "^4.0.3",
-    "react-spinners": "^0.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
+    "react-icons": "^4.12.0",
+    "react-image": "^4.1.0",
+    "react-spinners": "^0.13.8",
     "webhook-discord": "^3.7.8"
   },
   "devDependencies": {
-    "@types/node": "^14.0.5",
-    "@types/react": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "@typescript-eslint/typescript-estree": "^4.22.0",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "prettier": "^2.0.5",
-    "typescript": "^4.2.4"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@typescript-eslint/typescript-estree": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3"
   }
 }
