--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,11 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": [
+        "./*"
+      ]
+    },
+    "incremental": true
   },
   "exclude": [
     "node_modules"
